@@ -4,6 +4,10 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
+- Fix minor typo in available views for audio/video types. This previously
+  prevented saving type settings via the control panel.
+  [davidjb] 
+
 
 1.0b1 (2014-02-15)
 ------------------
